--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,7 @@
       content="Web site created for the Lahontan Regional Water Quality Control Board"
     />
     <title>Lahontan Regional Board - Water Quality Dashboard</title>
-    <script type="module" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule="" src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
